# clotho

./: .gitignore  CLAUDE.md  README.md  emit_lua.py  emitter.py  parser.py  pyproject.toml  tree_shake.py  trigger_body_parser.py
.github/workflows/: ci.yml  integration-gate.yml  release.yml
docs/design/: GRAPH_EMITTER.md
fml_parser/: __init__.py  __main__.py  artgen.py  dice_value.py  emit_lua.py  emit_map.py  errors.py  models.py  parser.py  predicate_lang.py  slugify.py
lua_reader/: __init__.py  reader.py  tokenizer.py
tests/: test_artgen.py  test_emit_graph.py  test_emit_map.py  test_emit_om.py  test_emit_spatial.py  test_persona_section.py  test_smoke.py  test_stdlib_classification.py
tests/fixtures/bone_garden/: golden_map.json  index.md
tests/fixtures/bone_garden/items/: stone_door.md
tests/fixtures/bone_garden/rooms/: catacombs.md  crypt.md  entry.md  garden.md  hall_of_skulls.md  ossuary.md  twisting_tunnels.md
