[project]
name = "fml-parser"
version = "0.1.0"
description = "FML → LFR emitter for TowerCrawlerAI. Deterministic Markdown-dialect parser that lowers floor authoring into Luau the engine-core binary can consume."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "markdown-it-py>=3.0",
    "pydantic>=2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
]

[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["fml_parser*"]

[project.scripts]
fml-parser = "fml_parser.__main__:main"
